--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </a>
                   </li>
                                                                         <li class="list-inline-item">
-                    <a href="Christopher-Acuff@utc.edu">
+                    <a href="mailto:Christopher-Acuff@utc.edu">
                       <button type="button" class="btn btn-outline-dark">
                         Email
                       </button>
@@ -68,7 +68,7 @@
           <div id="content">
             <div id="bio" class="section level2">
             <h2>Bio</h2>
-            <p>Dr. Christopher Acuff is an Assistant Professor of Public Administration in the Department of Political Science and Public Service at UTC. He holds a Ph.D. in Political Science from University of Tennessee at Knoxville and a Master of Public Administration from UTC. Before returning to his hometown of Chattanooga, Acuff served as a research analyst for the State of Tennessee in Nashville. His research interests focus on state and local government, urban politics, public policy, and political geography. His current research projects are focused on the impacts of city-county consolidation, factors that shape citizen voting in local referenda, developing equity indicators for municipal government, county government administration, and the socio-ecological role of greenways in urban systems. Acuff regularly teaches a number of courses focused on public administration, public policy, and American government at both the graduate and undergraduate levels.</p>
+            <p>Dr. Christopher Acuff is an Assistant Professor of Public Administration in the Department of Political Science and Public Service at UTC. He holds a Ph.D. in Political Science from University of Tennessee at Knoxville and a Master of Public Administration from UTC. Before returning to his hometown of Chattanooga, Acuff served as a research analyst for the State of Tennessee in Nashville. His research interests focus on state and local government, urban politics, public policy, and political geography. His current research projects are focused on the impacts of city-county consolidation, factors that shape citizen voting in local referenda, assessing equity in municipal government, county government administration, and the socio-ecological role of greenways in urban systems. Acuff regularly teaches a number of courses on public administration, public policy, and American government at both the graduate and undergraduate levels.</p>
             </div>
             <div id="education" class="section level2">
             <h2>Education</h2>
@@ -119,7 +119,7 @@
                       GitHub
                     </button>
                   </a>
-                                                                        <a href="Christopher-Acuff@utc.edu">
+                                                                        <a href="mailto:Christopher-Acuff@utc.edu">
                     <button type="button" class="list-group-item list-group-item-action my-1 rounded">
                       Email
                     </button>
@@ -130,7 +130,7 @@
             <div class="p pt-4 px-5">
               <div id="bio" class="section level2">
               <h2>Bio</h2>
-              <p>Dr. Christopher Acuff is an Assistant Professor of Public Administration in the Department of Political Science and Public Service at UTC. He holds a Ph.D. in Political Science from University of Tennessee at Knoxville and a Master of Public Administration from UTC. Before returning to his hometown of Chattanooga, Acuff served as a research analyst for the State of Tennessee in Nashville. His research interests focus on state and local government, urban politics, public policy, and political geography. His current research projects are focused on the impacts of city-county consolidation, factors that shape citizen voting in local referenda, developing equity indicators for municipal government, county government administration, and the socio-ecological role of greenways in urban systems. Acuff regularly teaches a number of courses focused on public administration, public policy, and American government at both the graduate and undergraduate levels.</p>
+              <p>Dr. Christopher Acuff is an Assistant Professor of Public Administration in the Department of Political Science and Public Service at UTC. He holds a Ph.D. in Political Science from University of Tennessee at Knoxville and a Master of Public Administration from UTC. Before returning to his hometown of Chattanooga, Acuff served as a research analyst for the State of Tennessee in Nashville. His research interests focus on state and local government, urban politics, public policy, and political geography. His current research projects are focused on the impacts of city-county consolidation, factors that shape citizen voting in local referenda, assessing equity in municipal government, county government administration, and the socio-ecological role of greenways in urban systems. Acuff regularly teaches a number of courses on public administration, public policy, and American government at both the graduate and undergraduate levels.</p>
               </div>
               <div id="education" class="section level2">
               <h2>Education</h2>
